[tool.poetry]
name = "nlpstack"
version = "0.1.0"
description = "Modules for NLP"
authors = ["altescy <altescy@fastmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/altescy/nlpstack"
keywords=["python", "nlp", "pytorch", "scikit-learn"]

[tool.poetry.scripts]
nlpstack = "nlpstack.__main__:run"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
collatable = ">=0.3.2"
colt = ">=0.11.1"
dill = "*"
minato = ">=0.12"
numpy = "*"
rjsonnet = ">=0.5"
scikit-learn = ">=1.0,<2.0"
torch = ">=1.9,<3.0"
mlflow = {version = ">=2.0,<3.0", optional = true}
spacy = {version = ">=3.5.3,<4.0", optional = true}
transformers = {version = ">=4.12.3,<5.0", optional = true}
fasttext-wheel = {version = ">=0.9,<1.0", optional = true}
optuna = {version = ">=3.2,<4.0", optional = true}
fugashi = {version = ">=1.2.1,<2.0", optional = true, extras = ["unidic-lite"]}
sentence-transformers = {version = ">=2.2.2", optional = true}
openai = {version = ">=1.0,<2.0", optional = true}

[tool.poetry.extras]
all = ["mlflow", "spacy", "transformers", "sentence-transformers", "fasttext-wheel", "fugashi", "optuna", "openai"]

[tool.poetry.group.dev.dependencies]
python-language-server = "^0.36.2"
pytest = "^7.4.4"
pysen = "^0.11.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^5.0.4"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240622"
types-setuptools = "^70.3.0.20240710"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
sphinx-book-theme = "^1.0.1"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-copybutton = "^0.5.2"

[tool.pysen]
version = "0.11"

[tool.pysen-cli]
settings_dir = "."

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
  includes = ["."]
  excludes = [".venv/"]


[tool.black] # automatically generated by pysen
# pysen ignores and overwrites any modifications
line-length = 120
target-version = ["py38"]

[tool.isort] # automatically generated by pysen
# pysen ignores and overwrites any modifications
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
